[project]
name = "npl"
version = "0.1.0"
description = "Noe's Pydantic Language"
authors = [
    {name = "Noe Javet",email = "np.javet@gmail.com"}
]
license = {text = "GPL"}
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
